# umap-mlx

./: .gitignore  README.md  fashion_mnist_anim.py  pyproject.toml  umap_mlx.py  verify.py
umap_mlx/: __init__.py  umap.py
