[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "umap-mlx"
version = "0.1.0"
description = "UMAP in pure MLX for Apple Silicon"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "mlx>=0.20.0",
    "numpy>=1.26.0",
]

[project.urls]
Repository = "https://github.com/hanxiao/umap-mlx"

[tool.hatch.build.targets.wheel]
packages = ["umap_mlx"]
